[package]
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
categories = ["game-development"]
description = "A camera that allows panning by dragging with the mouse"
edition = "2024"
keywords = ["gamedev", "bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_pancam"
repository = "https://github.com/johanhelsing/bevy_pancam"
version = "0.20.0"

[features]
bevy_egui_0_40 = ["dep:bevy_egui_0_40", "internal_bevy_egui"]
internal_bevy_egui = []

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
	"bevy_window",
	"bevy_core_pipeline",
	"bevy_log",
] }
bevy_egui_0_40 = { package = "bevy_egui", version = "0.40", optional = true, default-features = false }

[dev-dependencies]
bevy = { version = "0.19", default-features = false, features = [
	"2d",
	"bevy_mikktspace",
] }
bevy_egui_0_40 = { package = "bevy_egui", version = "0.40", default-features = false, features = [
	"default_fonts",
	"render",
] }
rand = "0.9"

[[example]]
name = "egui"
required-features = ["bevy_egui_0_40"]
